fix white background not stretching to fit the whole page

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
-	height: 1000px;
+	height: auto;
 	background-color: #FFFFFF;
 }
 
